Login No Funcional

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=demo
+spring.application.name=asambleaweb
 spring.datasource.url=jdbc:postgresql://localhost:5432/asambleaweb
 spring.datasource.username=postgres
 spring.datasource.password=1234
