--- a/pom.xml
+++ b/pom.xml
@@ -8,13 +8,13 @@
 		<version>3.2.3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.example</groupId>
-	<artifactId>demo</artifactId>
+	<groupId>com.asamblea</groupId>
+	<artifactId>web</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>demo</name>
-	<description>Demo project for Spring Boot</description>
+	<name>web</name>
+	<description>asambleaweb</description>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>21</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -25,7 +25,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
@@ -41,21 +40,17 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-security</artifactId>
-		</dependency>
-
+		
 	</dependencies>
-
+	
 	<build>
     <plugins>
         <plugin>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-maven-plugin</artifactId>
-            <version>3.2.3</version>
+			 <version>3.2.3</version>
             <configuration>
-                <mainClass>com.example.demo.DemoApplication</mainClass> <!-- Reemplaza com.example.demo.DemoApplication con tu clase principal -->
+                <mainClass>com.asamblea.web.asambleawebApplication</mainClass> <!-- Reemplaza com.example.demo.DemoApplication con tu clase principal -->
             </configuration>
         </plugin>
     </plugins>
